--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,13 +9,15 @@ batch:
       buildspec:
         - cypress/buildspec-cypress.yml
       env:
+        compute-type: BUILD_GENERAL1_MEDIUM
+        IMAGE: /aws/codebuild/standard:5.0
         variables:
-          SPEC_DIR:
-            - "cypress/e2e/1-getting-started/*.cy.js"
-            - "cypress/e2e/2-advanced-examples/*.cy.js"
-            - "cypress/e2e/3-advanced-examples/*.cy.js"
-            - "cypress/e2e/4-advanced-examples/*.cy.js"
-            # - "cypress/e2e/**/*.cy.js"
+          TEST_DIR:
+            - "1-getting-started"
+            - "2-advanced-examples"
+            - "3-advanced-examples"
+            - "4-advanced-examples"
+            # - "**"
           # REGION:
           #   - "main"
           #   - "ue1"
@@ -28,24 +30,24 @@ batch:
 #       buildspec: cypress/buildspec-ui.yml
 #       env:
 #         variables:
-#           SPEC_DIR: "cypress/e2e/1-getting-started/*.cy.js"
+#           TEST_DIR: "1-getting-started"
 #       ignore-failure: false
 #     - identifier: "2_advanced_examples"
 #       buildspec: cypress/buildspec-cypress.yml
 #       env:
 #         variables:
-#           SPEC_DIR: "cypress/e2e/2-advanced-examples/*.cy.js"
+#           TEST_DIR: "2-advanced-examples"
 #       ignore-failure: true
 #     - identifier: "3_advanced_examples"
 #       buildspec: cypress/buildspec-cypress.yml
 #       env:
 #         variables:
-#           SPEC_DIR: "cypress/e2e/3-advanced-examples/*.cy.js"
+#           TEST_DIR: "3-advanced-examples"
 #       ignore-failure: true
 #     - identifier: "4_advanced_examples"
 #       buildspec: cypress/buildspec-cypress.yml
 #       env:
 #         variables:
-#           SPEC_DIR: "cypress/e2e/4-advanced-examples/*.cy.js"
+#           TEST_DIR: "4-advanced-examples"
 #       ignore-failure: true
 
