--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,7 +8,7 @@
 #       ignore-failure: false
 #     dynamic:
 #       buildspec:
-#         - cypress/buildspec-cypress.yml
+#         - cypress/buildspec-ui.yml
 #       # env:
 #       #   compute-type: 
 #       #     - BUILD_GENERAL1_MEDIUM
@@ -38,19 +38,19 @@ batch:
           TEST_DIR: "1-getting-started"
       ignore-failure: false
     - identifier: "2_advanced_examples"
-      buildspec: cypress/buildspec-cypress.yml
+      buildspec: cypress/buildspec-ui.yml
       env:
         variables:
           TEST_DIR: "2-advanced-examples"
       ignore-failure: true
     - identifier: "3_advanced_examples"
-      buildspec: cypress/buildspec-cypress.yml
+      buildspec: cypress/buildspec-ui.yml
       env:
         variables:
           TEST_DIR: "3-advanced-examples"
       ignore-failure: true
     - identifier: "4_advanced_examples"
-      buildspec: cypress/buildspec-cypress.yml
+      buildspec: cypress/buildspec-ui.yml
       env:
         variables:
           TEST_DIR: "4-advanced-examples"
