--- a/cypress/buildspec-ui.yml
+++ b/cypress/buildspec-ui.yml
@@ -27,8 +27,8 @@ phases:
       # - npx cypress run --browser chrome --headless --spec $TEST_DIR
       # - npx cypress run --spec "cypress/e2e/1-getting-started/*.cy.js" --browser chrome:stable
       # - npx cypress run --spec "cypress/e2e/2-advanced-examples/*.cy.js" --browser chrome:stable
-      - echo $REGION
       - echo $TEST_DIR
+      - echo "ls -alh cypress/e2e/$TEST_DIR/*.cy.js"
       - npx cypress run --browser chrome --headless --spec "cypress/e2e/$TEST_DIR/*.cy.js"
       # - npx cypress run --spec "cypress/e2e/1-getting-started/*.cy.js" --browser chrome:stable
       # - npx cypress run --spec "cypress/e2e/2-advanced-examples/*.cy.js" --browser chrome:stable
