--- a/cypress/buildspec-ui.yml
+++ b/cypress/buildspec-ui.yml
@@ -23,13 +23,12 @@ phases:
   build:
     commands:
       - npm run start & #wait-on http://localhost:8080
-      # - echo $TEST_DIR
       # - npx cypress run --browser chrome --headless --spec $TEST_DIR
       # - npx cypress run --spec "cypress/e2e/1-getting-started/*.cy.js" --browser chrome:stable
       # - npx cypress run --spec "cypress/e2e/2-advanced-examples/*.cy.js" --browser chrome:stable
-      - echo $TEST_DIR
-      - echo "ls -alh cypress/e2e/$TEST_DIR/*.cy.js"
-      - npx cypress run --browser chrome --headless --spec "cypress/e2e/$TEST_DIR/*.cy.js"
+      - echo ${TEST_DIR}
+      - ls -alh cypress/e2e/${TEST_DIR}/*.cy.js
+      - npx cypress run --browser chrome --headless --spec "cypress/e2e/${TEST_DIR}/*.cy.js"
       # - npx cypress run --spec "cypress/e2e/1-getting-started/*.cy.js" --browser chrome:stable
       # - npx cypress run --spec "cypress/e2e/2-advanced-examples/*.cy.js" --browser chrome:stable
 
