--- a/cypress/buildspec-ui.yml
+++ b/cypress/buildspec-ui.yml
@@ -23,8 +23,7 @@ phases:
   build:
     commands:
       - npm run start & #wait-on http://localhost:8080
-      - echo ${TEST_DIR}
-      - ls -alh cypress/e2e/${TEST_DIR}/*.cy.js
+      - ls cypress/e2e/${TEST_DIR}/*.cy.js
       - npx cypress run --browser chrome --headless --spec "cypress/e2e/${TEST_DIR}/*.cy.js"
       # - npx cypress run --spec "cypress/e2e/1-getting-started/*.cy.js" --browser chrome:stable
       # - npx cypress run --spec "cypress/e2e/2-advanced-examples/*.cy.js" --browser chrome:stable
